--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
     width: 100px;
     height: 100px;
     background: red;
+    transition: 3s;
+}
+.ex-2-square:hover{
+    width: 400px;
 }
 .ex-3-square {
     width: 100px;
