--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     background-color: red;
     
 }
+
 .ex-2-square {
     width: 100px;
     height: 100px;
@@ -17,11 +18,17 @@
 .ex-2-square:hover{
     width: 400px;
 }
+
 .ex-3-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: 3s;
 }
+.ex-3-square:hover{
+    border-radius: 50%;
+}
+
 .ex-4-square {
     width: 100px;
     height: 100px;
