--- a/style.css
+++ b/style.css
@@ -33,7 +33,12 @@
     width: 100px;
     height: 100px;
     background: red;
+    transition: 3s;
 }
+.ex-4-square:hover{
+    background: rgb(245, 245, 245);
+}
+
 .ex-5-square {
     margin: 20px;
     width: 60px;
