--- a/style.css
+++ b/style.css
@@ -45,6 +45,15 @@
     height: 60px;
     background: red;
 }
+.ex-5-square:hover{
+    width: 100px;
+    height: 100px;
+}
+.ex-5-square:active{
+    width: 60px;
+    height: 60px;
+}
+
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
