--- a/style.css
+++ b/style.css
@@ -56,11 +56,14 @@
 
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
+    transition: 3s;
 }
 .ex-6-img:hover{
-    filter: grayscale(100%);
+    filter: grayscale(100%) sepia(30%);
 }
-
+.ex-7-img:hover{
+    filter: grayscale(100%) sepia(50%);
+}
 
 .ex-9-img {
     margin: 50px 100px;
