--- a/style.css
+++ b/style.css
@@ -61,9 +61,16 @@
 .ex-6-img:hover{
     filter: grayscale(100%) sepia(30%);
 }
+
 .ex-7-img:hover{
     filter: grayscale(100%) sepia(50%);
 }
+
+.ex-8-img:hover{
+    filter: grayscale(100%) sepia(50%);
+    border-radius: 3rem;
+}
+
 
 .ex-9-img {
     margin: 50px 100px;
