--- a/style.css
+++ b/style.css
@@ -71,11 +71,18 @@
     border-radius: 3rem;
 }
 
-
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
+    transition: 0.5s;
 }
+.ex-9-img:hover{
+    margin: 75px 150px;
+    width: 600px;
+    filter: grayscale(100%) blur(10px);
+    border-radius: 3rem;
+}
+
 .ex-10-icon {
     font-size: 60px;
 }
