--- a/style.css
+++ b/style.css
@@ -85,7 +85,17 @@
 
 .ex-10-icon {
     font-size: 60px;
+    animation: turn 0.5s;
+    animation-iteration-count: infinite;
 }
+@keyframes turn {
+    0%{
+        transform: rotate(1turn);
+    }
+
+}
+
+
 .ex-11-icon {
     font-size: 60px;
 }
