--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@
 
 .ex-10-icon {
     font-size: 60px;
-    animation: turn 0.5s;
+    animation: turn 1s;
     animation-iteration-count: infinite;
 }
 @keyframes turn {
@@ -95,10 +95,24 @@
 
 }
 
-
 .ex-11-icon {
     font-size: 60px;
 }
+.ex-11-icon:hover{
+    animation: turn 1s linear;
+}
+@keyframes turn {
+    0%{
+        transform: rotate(0);
+    }
+    75%{
+        transform: rotate(315deg);
+    }
+    100%{
+        transform: rotate(0);
+    }
+}
+
 .ex-12-button, .ex-13-button {
     position: relative;
     display: block;
